update: added current user endpoint
